--- a/INSTALL.txt
+++ b/INSTALL.txt
@@ -1,8 +1,8 @@
+Create a build dir in lib/ :
+mkdir lib/build
 To compile the library and its python interface simply type:
 make dynamiclib
 To compile the tests type:
 make test
-To compile the documentation type:
-make doc
 To compile all type:
 make all
