--- a/doc/latex/MhdOrientationRules_8hxx.tex
+++ b/doc/latex/MhdOrientationRules_8hxx.tex
@@ -17,7 +17,7 @@ class \hyperlink{classMhd_1_1ASL}{\-Mhd\-::\-A\-S\-L}
 \item 
 class \hyperlink{classMhd_1_1RAI}{\-Mhd\-::\-R\-A\-I}
 \item 
-class \hyperlink{classMhd_1_1LSA}{\-Mhd\-::\-L\-S\-A}
+class \hyperlink{classMhd_1_1LAS}{\-Mhd\-::\-L\-A\-S}
 \end{DoxyCompactItemize}
 \subsection*{\-Namespaces}
 \begin{DoxyCompactItemize}
