--- a/doc/latex/annotated.tex
+++ b/doc/latex/annotated.tex
@@ -2,7 +2,7 @@
 \-Here are the classes, structs, unions and interfaces with brief descriptions\-:\begin{DoxyCompactList}
 \item\contentsline{section}{\hyperlink{classMhd_1_1AIL}{\-Mhd\-::\-A\-I\-L} \\*\-Derived class to perform \-A\-I\-L-\/$>$\-R\-A\-S conversion }{\pageref{classMhd_1_1AIL}}{}
 \item\contentsline{section}{\hyperlink{classMhd_1_1ASL}{\-Mhd\-::\-A\-S\-L} }{\pageref{classMhd_1_1ASL}}{}
-\item\contentsline{section}{\hyperlink{classMhd_1_1LSA}{\-Mhd\-::\-L\-S\-A} }{\pageref{classMhd_1_1LSA}}{}
+\item\contentsline{section}{\hyperlink{classMhd_1_1LAS}{\-Mhd\-::\-L\-A\-S} }{\pageref{classMhd_1_1LAS}}{}
 \item\contentsline{section}{\hyperlink{classMhd_1_1MhdFactory}{\-Mhd\-::\-Mhd\-Factory} \\*\-The factory tha collects different \hyperlink{classMhd_1_1MhdOrientation}{\-Mhd\-Orientation} }{\pageref{classMhd_1_1MhdFactory}}{}
 \item\contentsline{section}{\hyperlink{classMhd_1_1MhdOrientation}{\-Mhd\-::\-Mhd\-Orientation} \\*\-Base class that contains methods to perform the \-R\-A\-S conversion }{\pageref{classMhd_1_1MhdOrientation}}{}
 \item\contentsline{section}{\hyperlink{classmhd_1_1MhdOrientation}{mhd.\-Mhd\-Orientation} \\*\-Class \hyperlink{classmhd_1_1MhdOrientation}{\-Mhd\-Orientation} imported in \-Python }{\pageref{classmhd_1_1MhdOrientation}}{}
