--- a/doc/latex/classMhd_1_1MhdOrientation.tex
+++ b/doc/latex/classMhd_1_1MhdOrientation.tex
@@ -162,7 +162,7 @@ float element of the \-Center\-Of\-Rotation
 \end{DoxyParams}
 
 
-\-Implemented in \hyperlink{classMhd_1_1LSA_ada82ad64afd2ea5adcd68678e3d7f9cf}{\-Mhd\-::\-L\-S\-A}, \hyperlink{classMhd_1_1RAI_af8c1b663c43431b40431a001ec91acc1}{\-Mhd\-::\-R\-A\-I}, \hyperlink{classMhd_1_1ASL_aeea608fdcf78a9c340dfa6cd01c69a43}{\-Mhd\-::\-A\-S\-L}, and \hyperlink{classMhd_1_1AIL_af6fda476c21c720db99d399163ee5f3b}{\-Mhd\-::\-A\-I\-L}.
+\-Implemented in \hyperlink{classMhd_1_1LAS_a4f13f477cd458018b3953ba1f35362d8}{\-Mhd\-::\-L\-A\-S}, \hyperlink{classMhd_1_1RAI_af8c1b663c43431b40431a001ec91acc1}{\-Mhd\-::\-R\-A\-I}, \hyperlink{classMhd_1_1ASL_aeea608fdcf78a9c340dfa6cd01c69a43}{\-Mhd\-::\-A\-S\-L}, and \hyperlink{classMhd_1_1AIL_af6fda476c21c720db99d399163ee5f3b}{\-Mhd\-::\-A\-I\-L}.
 
 \hypertarget{classMhd_1_1MhdOrientation_a5554337cc931090c765f41ce46c335fe}{\index{\-Mhd\-::\-Mhd\-Orientation@{\-Mhd\-::\-Mhd\-Orientation}!\-Create@{\-Create}}
 \index{\-Create@{\-Create}!Mhd::MhdOrientation@{\-Mhd\-::\-Mhd\-Orientation}}
@@ -177,7 +177,7 @@ float element of the \-Center\-Of\-Rotation
 
 
 
-\-Implemented in \hyperlink{classMhd_1_1LSA_a0c789e1d0d5af09af4ed25f9524e4587}{\-Mhd\-::\-L\-S\-A}, \hyperlink{classMhd_1_1RAI_aecb336828d73b837393091a98ba3f2dd}{\-Mhd\-::\-R\-A\-I}, \hyperlink{classMhd_1_1ASL_a3d07144eaf5369a16c7ece3d43a80a0b}{\-Mhd\-::\-A\-S\-L}, and \hyperlink{classMhd_1_1AIL_a5024cf0a7ac9b469436a070db45642be}{\-Mhd\-::\-A\-I\-L}.
+\-Implemented in \hyperlink{classMhd_1_1LAS_a6c26a5b3acadce4f71fd91e64fb1406b}{\-Mhd\-::\-L\-A\-S}, \hyperlink{classMhd_1_1RAI_aecb336828d73b837393091a98ba3f2dd}{\-Mhd\-::\-R\-A\-I}, \hyperlink{classMhd_1_1ASL_a3d07144eaf5369a16c7ece3d43a80a0b}{\-Mhd\-::\-A\-S\-L}, and \hyperlink{classMhd_1_1AIL_a5024cf0a7ac9b469436a070db45642be}{\-Mhd\-::\-A\-I\-L}.
 
 \hypertarget{classMhd_1_1MhdOrientation_ace88d015f223090979527ee691b11d9c}{\index{\-Mhd\-::\-Mhd\-Orientation@{\-Mhd\-::\-Mhd\-Orientation}!\-O@{\-O}}
 \index{\-O@{\-O}!Mhd::MhdOrientation@{\-Mhd\-::\-Mhd\-Orientation}}
