--- a/doc/latex/hierarchy.tex
+++ b/doc/latex/hierarchy.tex
@@ -5,7 +5,7 @@
 \begin{DoxyCompactList}
 \item \contentsline{section}{\-Mhd\-:\-:\-A\-I\-L}{\pageref{classMhd_1_1AIL}}{}
 \item \contentsline{section}{\-Mhd\-:\-:\-A\-S\-L}{\pageref{classMhd_1_1ASL}}{}
-\item \contentsline{section}{\-Mhd\-:\-:\-L\-S\-A}{\pageref{classMhd_1_1LSA}}{}
+\item \contentsline{section}{\-Mhd\-:\-:\-L\-A\-S}{\pageref{classMhd_1_1LAS}}{}
 \item \contentsline{section}{\-Mhd\-:\-:\-R\-A\-I}{\pageref{classMhd_1_1RAI}}{}
 \end{DoxyCompactList}
 \item \contentsline{section}{mhd.\-Mhd\-Orientation}{\pageref{classmhd_1_1MhdOrientation}}{}
