--- a/doc/latex/namespaceMhd.tex
+++ b/doc/latex/namespaceMhd.tex
@@ -19,7 +19,7 @@ class \hyperlink{classMhd_1_1ASL}{\-A\-S\-L}
 \item 
 class \hyperlink{classMhd_1_1RAI}{\-R\-A\-I}
 \item 
-class \hyperlink{classMhd_1_1LSA}{\-L\-S\-A}
+class \hyperlink{classMhd_1_1LAS}{\-L\-A\-S}
 \item 
 class \hyperlink{classMhd_1_1MhdProxy}{\-Mhd\-Proxy}
 \begin{DoxyCompactList}\small\item\em \-A proxy used to build an object \hyperlink{classMhd_1_1MhdOrientation}{\-Mhd\-Orientation} and to register it in the factory. \end{DoxyCompactList}\item 
